# Experiment

./: .gitignore  CMakeLists.txt  README.md  main.c  main.cpp  msg.c  mySem.c  mySem.h  mySort.c  mySort.h  my_rwlock.cpp  pipe.c
IPC/: pipe.c  sema.c  shared_mem.c  sock_pair.c
IPC/socket/: client.c  server.c
MultiPlex/: epoll.cpp
async/: main.cpp
bucket/: go.mod  main.go
concurrency/: CMakeLists.txt  main.cpp  mySem.cpp  mySort.cpp  mySort.h  my_rwlock.cpp  my_rwlock.h
sys/: daemon.c
